# full_stack_dsmp_automation

./: .env.example  .gitignore  README.md  conftest.py  index.html  pyproject.toml  pytest.ini  run-tests.ps1
.github/: docker-compose.e2e.yml
.github/workflows/: ci.yml
api/: __init__.py  base_api.py
api/admin/: __init__.py  admin_api.py  admin_response.py  admin_service.py
api/alerts/: __init__.py  alerts_api.py  alerts_request.py  alerts_response.py  alerts_service.py
api/auth/: __init__.py  auth_api.py  auth_request.py  auth_response.py  auth_service.py
api/scans/: __init__.py  scans_api.py  scans_response.py  scans_service.py
api/system/: __init__.py  system_api.py  system_response.py  system_service.py
config/: __init__.py  settings.py
core/: exceptions.py  reporting.py
core/core_utils/: __init__.py  logger.py  retry_utils.py
core/testing_utils/: __init__.py  playwright_artifacts.py  soft_checker.py
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 32e603f3baccfde0.txt  478ef2ff85842129.json  47c10c97ca9a3515.json  4fec8f4b32024772.txt  63e09f4e800f3665.json  7a30e545ade58287.txt  8047b8c01b99e5e3.json  930fdecc4c1b5dae.txt  9aa200f3ef7e3a74.txt  a703fc99d4fdc521.txt  af337982a19350b3.txt  b3a8e7940119c96e.json  c41171a8ceda2cd.txt  c7ff46a6fdb71b5c.json  cb38aa011190025f.json  d45d1897ebc3f062.json  (+1 more)
export/: influxDbData.txt  prometheusData.txt
history/: history.json
ui/: __init__.py
widgets/: duration-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+16 files in other folders)
